# haskell-data-analysis

./: LearningHaskellDataAnalysis01.hs  README.md  chapter_1.hs
chapter-two/: all_week.csv  chapter-two.cabal
chapter-two/src/: Main.hs
